# stereo3ddemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.example  README.md  vcpkg.json
allegiance/: CMakeLists.txt  multiview-scene.frag  multiview-scene.vert
allegiance/applications/: CMakeLists.txt
allegiance/applications/kdgui/: CMakeLists.txt
allegiance/applications/kdgui/serenity/: CMakeLists.txt  main.cpp  renderer_initializer.cpp  renderer_initializer.h  serenity_kdgui_window.cpp  serenity_kdgui_window.h  stereo_camera.h  window_watcher.h
allegiance/applications/qt/: CMakeLists.txt
allegiance/applications/qt/common/: CMakeLists.txt  camera_control.h  main_window.cpp  main_window.h  renderer_initializer.h  side_menu.h  window_event_watcher.h
allegiance/applications/qt/common/qml/: camera_control.qml
allegiance/applications/qt/common/qml/Schneider/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  controllers.cpp  controllers.h  cursor_controller.cpp  cursor_controller.h  misc_controller.cpp  misc_controller.h  scene_controller.cpp  scene_controller.h  style.h
allegiance/applications/qt/common/qml/Schneider/qml/: ButtonX.qml  CameraMenu.qml  CheckBoxX.qml  CursorMenu.qml  CustomSlider.qml  Logos.qml  MainMenu.qml  MiscMenu.qml  NonLinearSliderValue.qml  SectionTitle.qml  SliderValue.qml  resources.qrc
allegiance/applications/qt/qt3d/: CMakeLists.txt  imports.qml  main.cpp
allegiance/applications/qt/serenity/: CMakeLists.txt  main.cpp  serenity_gui_application.cpp  serenity_gui_application.h  serenity_renderer_qt.cpp  serenity_renderer_qt.h  serenity_window_qt.cpp  serenity_window_qt.h
allegiance/bridge/: CMakeLists.txt  renderer_interface_qt.h
allegiance/flutter/: CMakeLists.txt  entry_main_flutter.cpp
allegiance/flutter/ui/: pubspec.yaml
allegiance/flutter/ui/lib/: main.dart
allegiance/include/: app.h  camera_control.h  cursor.cpp  cursor.h  pch.h  picking_application_layer.h  qt3d_cursor.h  qt3d_impl.h  qt3d_materials.h  qt3d_shaders.h  serenity.h  serenity_impl.h  serenity_impl_qt.h  serenity_stereo_graph.h  sliders.h  spacemouse.cpp  spacemouse.h  stereo_camera.h  stereo_image_material.h  stereo_image_mesh.h  vertical_label.h  window.h  window_extent_watcher.h
allegiance/include/qt3d/: mesh_loader.h  scene_mesh.h
allegiance/include/serenity/: cursor.h  image.h  mesh_loader.h  serenity.h  serenity_qt.h
allegiance/include/ui/: camera_controller.h  style.h
allegiance/kdgui/: CMakeLists.txt  app.h  entry_main.cpp  stereo_camera.h
allegiance/qt/: CMakeLists.txt  app.h  camera_control.h  entry_main.cpp  qml_nodes.h  stereo_camera.h  window.h  window_watcher.h
allegiance/qt/resources/: AccItem.qml  CheckBoxX.qml  CursorMenu.qml  MainMenu.qml  PageBase.qml  resources.qrc
allegiance/qt/ui/: camera_controller.h  style.h
allegiance/renderer/: CMakeLists.txt
allegiance/renderer/qt3d/: CMakeLists.txt  focus_plane_preview.cpp  focus_plane_preview.h  frame_action.h  frustum.cpp  frustum.h  frustum_rect.cpp  frustum_rect.h  mesh_loader.cpp  mesh_loader.h  qt3d_cursor.cpp  qt3d_cursor.h  qt3d_focusarea.cpp  qt3d_focusarea.h  qt3d_impl.cpp  qt3d_impl.h  qt3d_materials.cpp  qt3d_materials.h  qt3d_renderer.cpp  qt3d_renderer.h  qt3d_shaders.h  scene_mesh.cpp  stereo_forward_renderer.cpp  stereo_forward_renderer.h  stereo_image_material.cpp  stereo_image_mesh.cpp  stereo_image_mesh.h  stereo_proxy_camera.cpp  stereo_proxy_camera.h  util_qt.h
allegiance/renderer/serenity/: CMakeLists.txt  Deps.cmake  cursor.cpp  cursor.h  custom_materials.cpp  custom_materials.h  focus_area.cpp  focus_area.h  focus_plane_preview.cpp  focus_plane_preview.h  frustum.cpp  frustum.h  frustum_rect.cpp  frustum_rect.h  mesh_loader.cpp  mesh_loader.h  pch.h  picking_application_layer.cpp  picking_application_layer.h  serenity_impl.cpp  serenity_impl.h  serenity_impl_kdgui.h  serenity_impl_qt.h  serenity_kdgui.h  serenity_qt.h  serenity_renderer.cpp  serenity_renderer.h  serenity_stereo_graph.cpp  serenity_stereo_graph.h  serenity_window.h  stereo_proxy_camera.h  window_extent_watcher.cpp  window_extent_watcher.h
allegiance/renderer/serenity/shaders/: CMakeLists.txt  billboard.frag  color.vert  focus_area.frag  focus_area.vert  focus_plane.frag  focus_plane.vert  frustum_lines.frag  frustum_rect.frag  frustum_rect.vert  frustum_tris.frag  frustum_tris.vert  glossy.frag  glossy.vert  multiview.dif.vert  multiview.phong.frag  multiview.phong.texture.frag  multiview.phong.texture.vert  multiview.phong.vert  multiview.vert  skybox.frag  skybox.vert  stereoimage.vert
allegiance/resources/: CheckBoxX.qml  MainMenu.qml  SliderValue.qml  resources.qrc
allegiance/serenity/: CMakeLists.txt  billboard.frag  billboard.vert  color.frag  multiview-scene.frag  multiview.frag  stereoimage.frag
allegiance/src/: entry_main.cpp  entry_main_flutter.cpp  entry_main_qt.cpp  picking_application_layer.cpp  serenity_stereo_graph.cpp  stereo_image_material.cpp  stereo_image_mesh.cpp  window_extent_watcher.cpp
allegiance/src/qt3d/: mesh_loader.cpp  scene_mesh.cpp
allegiance/src/serenity/: mesh_loader.cpp
assets/: resources.qrc  terrain.mtl
serenity/: CMakeLists.txt
shared/: CMakeLists.txt  cottage.mtl  motorbike.mtl  resources.qrc
shared/gltf/: showroom2303.gltf
shared/include/shared/: cursor.h  navmodel_navlib.h  spacemouse.h  spacemouse_impl.h  spacemouse_navlib.h  spacemouse_spnav.h  stereo_camera.h
shared/src/: navmodel_navlib.cpp  spacemouse_navlib.cpp  spacemouse_spnav.cpp  stereo_camera.cpp
tests/auto/: CMakeLists.txt  doctest.cmake
tests/auto/stereo_camera/: CMakeLists.txt  tst_stereo_camera.cpp
