project(allegiance VERSION ${PROJECT_VERSION})

add_subdirectory(renderer)

# For now let it remain like this
if(BUILD_QT_UI)
    if(BUILD_QT3D_RENDERER)
        set(POSTFIX "KDAB_SMC_OpenGL")
        set(ALLEGIANCE_RENDERER "Qt3D")
        set(QT_TARGET_LIB ${PROJECT_NAME}_${ALLEGIANCE_RENDERER}_qt)
        add_subdirectory(bridge ${CMAKE_CURRENT_BINARY_DIR}/bridge_qt3d)
        add_subdirectory(qt ${CMAKE_CURRENT_BINARY_DIR}/qt_qt3d)
    endif()
    if(BUILD_SERENITY_RENDERER)
        set(POSTFIX "KDAB_SMC_Vulkan_Qt")
        set(ALLEGIANCE_RENDERER "Serenity")
        set(QT_TARGET_LIB ${PROJECT_NAME}_${ALLEGIANCE_RENDERER}_qt)
        add_subdirectory(bridge ${CMAKE_CURRENT_BINARY_DIR}/bridge_serenity)
        add_subdirectory(qt ${CMAKE_CURRENT_BINARY_DIR}/qt_serenity)
    endif()
endif()
